static/styles/style.css
/*!
 * Author: Akash Bhadange
 */
/* The Modal (background) */
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.4);
}
.modal-header {
    color: white;
    background-color: #37324b;
}
/* Style for the modal content */
.modal-content {
    position: relative;
    background-color: #fefefe;
    /*margin: 15% auto;*/
    width:100%;
    /*height:100%;*/
    /*padding: 20px;*/
    border: 1px solid #888;
}
.close-btn {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}
.close-btn:hover,
.close-btn:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

.full-width-button {
    width: 100%;
    padding: 10px;
    border: solid 1px black; /* Remove border */
    cursor: pointer; /* Pointer/hand icon */
}
.full-width-button {
    cursor: pointer;
    padding: 10px;
    background-color: white !important;
    color: black !important;
    border: 1px solid black;
}
.full-width-button:hover {
    background-color: lightgrey !important;
}
.full-width-button:active {
    background-color: #37324b !important;
    transform: translateY(3px);
}

input[type='submit']:active {
    transform: translateY(3px);
}
input[type='image']:active {
    transform: translateY(3px);
}
input[type='checkbox']:checked {
    background-color: black;
}

input[type='checkbox'] {
    width: 40px !important;
    height: 40px !important;
    margin: auto;
    box-sizing: border-box;
}
.custom-checkbox input[type="checkbox"] {
    display: none;
}
input[type="checkbox"] .checkmark {
    width: 20px;
    height: 20px;
    background-color: white;
    border: 2px solid black;
    display: inline-block;
    position: relative;
    accent-color: #4CAF50;
    cursor: pointer;
}

/* Change the background color when the checkbox is checked */
.custom-checkbox input[type="checkbox"]:checked + .checkmark {
    background-color: black;
}
input[type='checkbox']:checked {
    background-color: black;
}
.checkmark {
    background-color: black;
}
table {
    /*width: 100%;*/
    border: 1px solid black;
    overflow-y: scroll;
    outline: 1px solid black;
}
th, td {
    border: 1px solid black;
    border-collapse: collapse;
    text-align:center;
    vertical-align:middle;
}

#table-wrapper {
    position: relative;
}

#table-scroll {
    height: 60vh;
    overflow: auto;
    margin-top: 2px;
}

#table-wrapper table * {
    background: white;
    color: black;
}

#table-wrapper table thead th .text {
    position: absolute;
    top: -20px;
    z-index: 2;
    height: 20px;
    border: 1px solid black;
}
.clickable-cell {
    cursor: pointer;
    padding: 10px;
    /*border: 1px solid #000;*/
}
.clickable-cell:hover {
    background-color: lightgrey !important;
}
.clickable-cell:active {
    background-color: #37324b !important;
    transform: translateY(3px);
}

/* CSS animation */
@-webkit-keyframes fadeIn {
    0% {
        opacity: 0;
        transform: scale(0.6);
    }

    100% {
        opacity: 100%;
        transform: scale(1);
    }
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 100%;
    }
}
.dropdown {
    position: relative;
    display: inline-block;
}

.dropbtn {
    background-color: #4CAF50;
    color: white;
    padding: 16px;
    font-size: 16px;
    /*border: none;*/
    box-sizing:border-box;
}
/*body {
  font-family: 'Open Sans', sans-serif;
  background-color: #f2f2f2;
  font-size: 16px;
  color: #222;
  font-weight: normal;
  letter-spacing: 0.03em;
  box-sizing:border-box;
}*/
html, body {
    margin: 0;
    padding: 0;
    color: #222;
    width: 100%;
    height: 100%;
    font-family: 'Open Sans', sans-serif;
    background-color: #f2f2f2;
    font-size: 16px;
    box-sizing: border-box;
    position: relative;
}
body {
    display: flex;
    flex-direction: column;
}
.content {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #f0f0f0;
}
a {
  color: blue;
  text-decoration: underline;
}
section {
  width: 100%;
}
a:hover, a:focus, a:active {
  text-decoration: underline;
}
ul {
  margin: 0;
  padding: 0;
}
ul li {
  list-style: none;
}
img {
  max-width: 100%;
}
.purple_orig {
  color: #7447ae;
}
.purple {
  color: #37324b;
}
.pink {
  color: #ff2a75;
}
.blue {
  color: #37a7ff;
}

/* Hero Section */
header.hero {
    background: url(../assets/seattle.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    color: #fff;
    padding-bottom: 5px;
}

header.hero .hero-text {
  margin-top: 10%;
  margin-bottom: 10%;
  text-align: left;
}
header.hero .row {
  position: relative;
}
a.menu {
  position: absolute;
  right: 0;
  top: 3em;
}
a.menu img {
  max-width: 40px;
}
a.menu:hover {
  transform: translateX(-5px);
  -webkit-transform: translateX(-5px);
}
header.hero h1 {
  font-family: 'Montserrat', sans-serif;
  font-size: 4.5em;
  font-weight: 600;
  line-height: 1.4em;
}
header.hero h1 span,
header.hero h3 {
  font-weight: 300;
}
header.hero .btn {
  margin: 3em 0;
}



/* Case study */
.case-study .col-md-12 {
  /*transform: translateY(-80px);
  -webkit-transform: translateY(-80px);
  padding: 5em 3em;*/
  background-color: #fff;
  height:45vh !important
  box-shadow: 0 0 100px rgba(0, 0, 0, 0.15);
}
h4.sub-heading {
  text-transform: uppercase;
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  color: #4e4c58;
}
h1.heading {
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  color: #4e4c58;
  font-size: 3em;
  position: relative;
  padding-bottom: 10px;
}
h1.heading span {
  font-weight: 600;
}
h1.heading:after {
  content: '';
  display: block;
  position: absolute;
  bottom: -10px;
  left: 0;
  height: 3px;
  width: 100px;
}
/* ... */

